# CPUInfo

./: CMakeLists.txt  README.md
include/: CPUInfo.h  CpuInfo.h
include/detail/: cpuid.h  cpuinfo_type.h
source/: CMakeLists.txt  CPUInfo.cpp
